--- a/html/footer.html
+++ b/html/footer.html
@@ -4,9 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../css/footer.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="footer">
+    <div class="social">
+      <span class="social-wx icon-posi"></span>
+      <span class="social-sina icon-posi"></span>
+    </div>
+    <ul class="link">
+      <li class="link-item">
+        <div class="hot-rent">热门短租:</div>
+        <div class="link-list">
+            <a href="javascript:;">北京短租房</a>
+            <a href="javascript:;">上海短租</a>
+            <a href="javascript:;">重庆短租房</a>
+            <a href="javascript:;">天津短租房</a>
+            <a href="javascript:;">青岛短租房</a>
+            <a href="javascript:;">秦皇岛短租房</a>
+            <a href="javascript:;">三亚短租房</a>
+            <a href="javascript:;">大连短租房</a>
+            <a href="javascript:;">威海短租房</a>
+            <a href="javascript:;">日照短租房</a>
+            <a href="javascript:;">烟台短租房</a>
+            <a href="javascript:;">厦门短租房承</a>
+            <a href="javascript:;">德短租房</a>
+            <a href="javascript:;">大理短租房</a>
+        </div>
+        <div class="extend">+展开</div>
+      </li>
+      <li class="link-item">
+          <div class="hot-rent">短租公寓推荐：</div>
+          <div class="link-list">
+              <a href="javascript:;">珠海短租房公寓</a>
+              <a href="javascript:;">中山短租房公寓</a>
+              <a href="javascript:;">郑州短租房公寓</a>
+              <a href="javascript:;">张家界短租房公寓</a>
+              <a href="javascript:;">西双版纳短租房公寓</a>
+              <a href="javascript:;">西宁短租房公寓</a>
+              <a href="javascript:;">香港短租房公寓</a>
+              <a href="javascript:;">西安短租房公寓</a>
+              <a href="javascript:;">厦门短租房公寓</a>
+              <a href="javascript:;">无锡短租房公寓</a>
+          </div>
+          <div class="extend">+展开</div>
+        </li>
+        <li class="link-item">
+            <div class="hot-rent">友情链接</div>
+            <div class="link-list">
+                <a href="javascript:;">火车票资讯</a>
+                <a href="javascript:;">成都租房</a>
+                <a href="javascript:;">找房子</a>
+                <a href="javascript:;">汽车时刻表查询</a>
+                <a href="javascript:;">酒店预订网</a>
+                <a href="javascript:;">装修网</a>
+                <a href="javascript:;">旅游攻略</a>
+                <a href="javascript:;">景点门票 </a>
+                <a href="javascript:;">台湾旅游</a>
+                <a href="javascript:;">装修</a>
+                <a href="javascript:;">海外房产</a>
+                <a href="javascript:;">广州房产网</a>
+                <a href="javascript:;">装修网</a>
+                <a href="javascript:;">租房网 </a>
+                <a href="javascript:;">深圳房产</a>
+            </div>
+          
+
+       
+            <div class="extend">+展开</div>
+          </li>
+    </ul>
+    <div class="footer-nav"></div>
+  </div>
 </body>
 </html>
