完成了详情页  手机APP页面还有60%

--- a/html/footer.html
+++ b/html/footer.html
@@ -69,13 +69,51 @@
                 <a href="javascript:;">租房网 </a>
                 <a href="javascript:;">深圳房产</a>
             </div>
-          
-
-       
             <div class="extend">+展开</div>
           </li>
     </ul>
-    <div class="footer-nav"></div>
+    <div class="footer-nav">
+      <div class="footer-nav-div1">
+          <a href="javascript:void(0)">免责声明</a>
+          <a href="javascript:void(0)">平台服务协议</a>
+          <a href="javascript:void(0)">交易规则</a>
+          <a href="javascript:void(0)">关于我们</a>
+          <a href="javascript:void(0)">联系我们</a>
+          <a href="javascript:void(0)">法律声明</a>
+          <a href="javascript:void(0)">新手指南</a>
+          <a href="javascript:void(0)">帮助中心</a>
+          <a href="javascript:void(0)">短租房</a>
+          <a href="javascript:void(0)">新闻资讯</a>
+          <a href="javascript:void(0)">媒体报道</a>
+      </div>
+      <div class="footer-nav-div2">
+          客服电话：400-056-0055 或 010-89180879
+          <span class="m10">客户服务：service@muniao.com</span>
+          <span class="m10">意见反馈：feedback@muniao.com</span>
+      </div>
+      <div class="footer-nav-div3">
+          网站备案/许可证号：京ICP备12043553号-3 
+          <a href="javascript:void(0);">京公网安备11010502037765号</a>
+          <a href="javascript:(0);">营业执照编号 104555056</a>
+          北京爱游易科技有限公司 
+      </div>
+      <div class="footer-nav-div4">
+        <ul class="footer-nav-div4-ul">
+          <li>
+            <a href="javascript:void(0);">
+                <img src="../public/footer/pic1.jpg" alt="">
+            </a>
+          </li>
+          <li>
+            <img src="../public/footer/pic2.jpg" alt="">
+          </li>
+            <img src="../public/footer/pic3.jpg" alt="">
+          <li>
+            <img src="../public/footer/pic4.jpg" alt="">
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
