基本页面已经完成

--- a/html/mobile.html
+++ b/html/mobile.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <!-- 移动端 三个部分 -->
+  <!-- 第一部分 -->
   <div class="w-download-top">
     <div class="w_download_box">
       <div class="w_download_txt">
@@ -42,9 +43,37 @@
           </ul>
         </div>
       </div>
-     
+    </div>
+    <!-- 第二部分 -->
+  <div class="w_download_fuctionbg">
+    <div class="w_download_fuction">
+      <div class="w_download_fuctionbox">
+        <div class="w_download_fuctioname1">海量房源任你选</div>
+        <div class="w_download_fuctionfb">木鸟短租在海内外500多个国家和地区，90万套房源，任你选择。</div>
       </div>
-  <div></div>
-  <div></div>
+      <div class="w_download_fuctionbox">
+        <div class="w_download_fuctioname2">一键定位找身边</div>
+        <div class="w_download_fuctionfb">一键找附近房源，方便快捷，订房就是这么简单！</div>
+      </div>
+      <div class="w_download_fuctionbox">
+        <div class="w_download_fuctioname3">一手掌握放心住</div>
+        <div class="w_download_fuctionfb">移动APP方便快捷随时随地随心订房，更有木鸟短租千万资金房客保障计划陪伴，放心入住！</div>
+      </div>
+      <div class="w_download_fuctionbox">
+        <div class="w_download_fuctioname4">安心民宿在指尖</div>
+        <div class="w_download_fuctionfb">公开房东联系方式一键拨打房东电话，轻松订房，移动支付，订房就在弹指一挥间。</div>
+      </div>
+    </div>
+  </div>
+  <!-- 第三部分 -->
+  <div class="w_download_helpbg">
+    <div class="w_download_help">
+      <div class="w_download_helptxt">
+        <span>不知道怎么下载？</span>
+        <br>
+        各大应用市场搜索“木鸟短租”即可找到哦！
+      </div>
+    </div>
+  </div>
 </body>
 </html>
