基本页面已完成

--- a/html/header.html
+++ b/html/header.html
@@ -34,9 +34,9 @@
     <!-- 右边登录/注册 -->
     <div class="right">
       <button class="right-btn">免费发布房源</button>
-      <span class="rignt-txt">登录</span>
-      <span>/</span>
-      <span class="rignt-txt">注册</span>
+      <span class="right-txt">登录&nbsp;/&nbsp;注册</span>
+      <!-- <span>/</span>
+      <span class="right-txt">注册</span> -->
     </div>
   </div>
 </body>
