--- a/html/story.html
+++ b/html/story.html
@@ -14,7 +14,7 @@
   <!-- 租房故事，整体两个部分，轮播图和故事列表 -->
   <!-- 第一部分，轮播图部分 -->
   <div class="w_storybanner">
-    <ul>
+    <ul id="ul_imgs">
       <li style="display: block;">
         <a src="javascript:;"></a>
       </li>
@@ -33,7 +33,7 @@
     </ul>
     <!-- 按钮部分 -->
     <div class="tabbtn">
-      <a href="javascript:void(0);" data-target="0"></a>
+      <a href="javascript:void(0);" class="active" data-target="0"></a>
       <a href="javascript:void(0);" data-target="1"></a>
       <a href="javascript:void(0);" data-target="2"></a>
       <a href="javascript:void(0);" data-target="3"></a>
