--- a/html/search.html
+++ b/html/search.html
@@ -74,10 +74,46 @@
           <div class="s_mn_screen_ipt w_searchlist cleafix">
             <ul class="s_mn_screen_list1 cleafix">
               <li class="clearfix czc_000000048">
-                <div></div>
-                <div>房间位置：</div>
-                <div></div>
-                <div></div>
+                <div class="s_mn_screenqy">
+                  <div class="s_mn_screen_tit">房间位置：</div>
+                  <div class="f12" id="list_tab"> 
+                    <ul>
+                      <div class="w_listbx">
+                        <div class="w_listspan2">
+                          <a href="javascript:void(0);" class="s_mn_screen_aover">不限</a>
+                        </div>
+                      </div>
+                      <li>
+                        <span class="w_listspan">行政区域</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">热门地标</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">商圈周边</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">机场车站</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">学校周边</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">商务办公</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">景点周边</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">医院周边</span>
+                      </li>
+                      <li>
+                        <span class="w_listspan">展馆周边</span>
+                      </li>
+                    </ul>
+                  </div>
+                  <div></div>
+                </div>
               </li>
               <li class="clearfix czc_000000049"></li>
               <li class="clearfix czc_000000050"></li>
