已经引入头部脚部

--- a/html/features.html
+++ b/html/features.html
@@ -6,10 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/features.css">
+  <!-- 引入Jquery 和 头部  和  脚部 -->
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/header.js"></script>
+  <script src="../js/footer.js"></script>
   <title>Document</title>
 </head>
 
 <body>
+  <!-- 头部 -->
+  <header id="header"></header>
   <!-- features.html页面 -->
   <!-- 页面整体分为两个部分 -->
   <div id="features-banner">
@@ -158,6 +164,8 @@
       </div>
     </div>
   </div>
+  <!-- 脚部 -->
+  <footer id="footer"></footer>
 </body>
 
 </html>
