--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/index.css">
+  <!-- 引入Jquery 和 头部  和  脚部 -->
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/header.js"></script>
+  <script src="../js/footer.js"></script>
   <script src="../js/login.js"></script>
   <title>Document</title>
   
 </head>
 <body>
-  <header id="header">
-    <iframe src="header.html" frameborder="0" scrolling="no" width="1440px" height="59px"></iframe>
-  </header>
+  <header id="header"></header>
   <!-- 0.1添加灰色背景 -->
   <div class="bg-all-dark d-none"></div>
   <!-- 0.1登录注册窗口 -->
@@ -426,6 +428,7 @@
       </div>
     </div>
   </div>
+  <footer id="footer"></footer>
 </body>
 
 </html>
