--- a/html/story.html
+++ b/html/story.html
@@ -6,11 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/story.css">
+  <!-- 引入Jquery 和 头部  和  脚部 -->
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/header.js"></script>
+  <script src="../js/footer.js"></script>
   <script src="../js/carousel.js"></script>
+
   <title>Document</title>
 </head>
 
 <body>
+  <!-- 头部 -->
+  <header id="header"></header>
   <!-- 租房故事，整体两个部分，轮播图和故事列表 -->
   <!-- 第一部分，轮播图部分 -->
   <div class="w_storybanner">
@@ -422,6 +429,8 @@
       </div>
     </div>
   </div>
+  <!-- 脚部 -->
+  <footer id="footer"></footer>
 </body>
 
 </html>
