--- a/html/mobile.html
+++ b/html/mobile.html
@@ -5,9 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/mobile.css">
+  <!-- 引入Jquery 和 头部  和  脚部 -->
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/header.js"></script>
+  <script src="../js/footer.js"></script>
   <title>Document</title>
 </head>
 <body>
+  <!-- 头部 -->
+  <header id="header"></header>
   <!-- 移动端 三个部分 -->
   <!-- 第一部分 -->
   <div class="w-download-top">
@@ -75,5 +81,7 @@
       </div>
     </div>
   </div>
+  <!-- 脚部 -->
+  <footer id="footer"></footer>
 </body>
 </html>
