--- a/html/search.html
+++ b/html/search.html
@@ -9,9 +9,16 @@
   <link rel="stylesheet" href="../css/search.css  ">
   <script src="../js/jquery-3.4.1.js"></script>
   <script src="../js/search.js"></script>
+  <!-- 引入Jquery 和 头部  和  脚部 -->
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/header.js"></script>
+  <script src="../js/footer.js"></script>
+  
 </head>
 
 <body>
+  <!-- 头部 -->
+  <header id="header"></header>
   <!-- 两大部分 -->
   <!-- 第一部分 -->
   <div class="s_mn_mainbox">
@@ -4498,8 +4505,100 @@
       </div>
     </div>
     <!-- 最近浏览 -->
-    <div class="s_mn_recommended_bottom"></div>
+    <div class="s_mn_recommended_bottom">
+      <div class="s_mn_center2">
+        <div class="s_mn_title">
+          <div class="s_mn_t1">最近浏览</div>
+        </div>
+        <ul class="s_mn_rec_bottom">
+          <li style="display: block">
+            <div class="s_mn_module3x">
+              <div class="s_mn_place3">
+                <div class="s_mn_housingbox3">
+                  <div class="s_mn_housing_img3">
+                    <a href="javascript:void(0);">
+                      <img src="../public/search/near1.webp" alt="">
+                    </a>
+                  </div>
+                  <div class="s_mn_housing_textbox3">
+                    <div class="s_mn_housing_title3">
+                      <a href="javascript:void(0);" title="十渡紫藤佳苑别墅整栋出租">十渡紫藤佳苑别墅整栋出租</a>
+                    </div>
+                    <div class="s_mn_lates_houseintroduce">
+                      <span class="s_mn_house_area">北京 - 房山区</span>
+                      <span class="s_mn_house_price">￥800/晚</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="s_mn_module3x">
+              <div class="s_mn_place3">
+                <div class="s_mn_housingbox3">
+                  <div class="s_mn_housing_img3">
+                    <a href="javascript:void(0);">
+                      <img src="../public/search/near2.webp" alt="">
+                    </a>
+                  </div>
+                  <div class="s_mn_housing_textbox3">
+                    <div class="s_mn_housing_title3">
+                      <a href="javascript:void(0);" title="高教园地铁站附近精致小一居">高教园地铁站附近精致小一居</a>
+                    </div>
+                    <div class="s_mn_lates_houseintroduce">
+                      <span class="s_mn_house_area">北京 - 昌平区</span>
+                      <span class="s_mn_house_price">￥139/晚</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="s_mn_module3x">
+              <div class="s_mn_place3">
+                <div class="s_mn_housingbox3">
+                  <div class="s_mn_housing_img3">
+                    <a href="javascript:void(0);">
+                      <img src="../public/search/near3.webp" alt="">
+                    </a>
+                  </div>
+                  <div class="s_mn_housing_textbox3">
+                    <div class="s_mn_housing_title3">
+                      <a href="javascript:void(0);" title="高级大床房 梨园地铁站 ...">高级大床房 梨园地铁站 ...</a>
+                    </div>
+                    <div class="s_mn_lates_houseintroduce">
+                      <span class="s_mn_house_area">北京 - 通州区</span>
+                      <span class="s_mn_house_price">￥168/晚</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="s_mn_module3x">
+              <div class="s_mn_place3">
+                <div class="s_mn_housingbox3">
+                  <div class="s_mn_housing_img3">
+                    <a href="javascript:void(0);">
+                      <img src="../public/search/near4.webp" alt="">
+                    </a>
+                  </div>
+                  <div class="s_mn_housing_textbox3">
+                    <div class="s_mn_housing_title3">
+                      <a href="javascript:void(0);" title="新中式小清新">新中式小清新</a>
+                    </div>
+                    <div class="s_mn_lates_houseintroduce">
+                      <span class="s_mn_house_area">北京 - 怀柔区</span>
+                      <span class="s_mn_house_price">￥2880/晚</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
+  <!-- 脚部 -->
+  <footer id="footer"></footer>
 </body>
 
 </html>
