--- a/html/search.html
+++ b/html/search.html
@@ -4491,12 +4491,29 @@
       <!-- 右边房源推荐 -->
       <div class="s_mn_sidebar">
         <div class="w_listbz">
-          <div>
+          <div class="w_listbzicon">
             <a href="">
               <img src="../public/search/bz_bigicon.jpg" alt="">
             </a>
           </div>
-          <u></u>
+          <ul id="w_listbzul" class="w_listbzul f14">
+            <li>
+              <span>房源100%实地验证</span>
+              <div class="w_listbztip f12"></div>
+            </li>
+            <li>
+              <span>付款到木鸟 资金有保障</span>
+              <div class="w_listbztip f12"></div>
+            </li>
+            <li>
+              <span>保障入住人身安全</span>
+              <div class="w_listbztip f12"></div>
+            </li>
+            <li>
+              <span>地主之谊出行无忧</span>
+              <div class="w_listbztip f12"></div>
+            </li>
+          </ul>
         </div>
         <ul class="roomList-newAdd"></ul>
         <div class="w_list_Rtitle"></div>
