--- a/html/header.html
+++ b/html/header.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/header.css">
+  <script src="../js/jquery-3.4.1.js"></script>
+  <script src="../js/event.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -18,16 +20,16 @@
     <div class="middle">
       <ul class="middle-ul">
         <li>
-          <a href="javascript:void(0);" class="middle-ul-link">首页</a>
+          <a href="index.html" class="middle-ul-link active">首页</a>
         </li>
         <li>
-          <a href="javascript:void(0);" class="middle-ul-link">特色短租</a>
+          <a href="features.html" class="middle-ul-link">特色短租</a>
         </li>
         <li>
-          <a href="javascript:void(0);" class="middle-ul-link">发现</a>
+          <a href="story.html" class="middle-ul-link">发现</a>
         </li>
         <li>
-          <a href="javascript:void(0);" class="middle-ul-link">手机木鸟</a>
+          <a href="mobile.html" class="middle-ul-link">手机木鸟</a>
         </li>
       </ul>
     </div>
@@ -39,5 +41,51 @@
       <span class="right-txt">注册</span> -->
     </div>
   </div>
+   <!-- 0.1添加灰色背景 -->
+   <div class="bg-all-dark d-none"></div>
+   <!-- 0.1登录注册窗口 -->
+   <div class="newa_login_main d-none">
+     <a href="javascript:void(0);" class="newa_close"></a>
+     <ul class="newa_login_tab">
+       <li class="newa_login_t_active">
+         <span>快捷登录</span>
+       </li>
+       <li>
+         <span>普通登录</span>
+       </li>
+     </ul>
+     <!-- 快捷登录 -->
+     <div class="newa_login_con">
+       <ul class="newa_login_input">
+         <li>
+           <i class="newa_kj_icon"></i>
+           <input type="text" placeholder="手机号">
+         </li>
+         <li>
+           <i class="newa_piccode_icon"></i>
+           <input type="text" placeholder="图形验证码">
+           <a href="javascript:void(0);" class="newa_piccode">
+             <img src="../public/index/VerifyCode.gif" alt="">
+           </a>
+         </li>
+         <li>
+           <i class="newa_code_icon"></i>
+           <input type="text" placeholder="短线验证码">
+           <span class="newa_code">获取短信验证码</span>
+         </li>
+         </ul>
+       <div class="newa_foget">
+           <a href="javascript:void(0);">忘记密码?</a>
+       </div>
+       <a href="javascript:void(0);" class="newa_login_btn"></a>
+       <p class="newa_zc">验证通过即登录，未注册手机号将创建木鸟账号</p>
+       <div class="newa_coop">
+         <a href="javascript:void(0);" class="newa_sina"></a>
+         <a href="javascript:void(0);" class="newa_qq"></a>
+       </div>
+     </div>
+     <!-- 普通登录 -->
+     <div></div>
+   </div>
 </body>
 </html>
