--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>rent</title>
+    <link rel="shortcut icon" href="http://127.0.0.1:5050/header/favicon.ico">
+    <title>木鸟出租</title>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but rent doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+  <body style="margin: 0px">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
